refactor UpdateUser API
